# secure-vector-db

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Despliegue.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.redis.yml  docker-compose.yml  pyproject.toml  requirements-ann.txt  requirements-dev.txt  requirements-embeddings.txt  requirements-jwt.txt  requirements.txt
benchmarks/: benchmark.py  benchmark_ordered_index.py
deploy/: README.md  render.example.yaml
docs/: API_CONTRACT.md  AUTH.md  AUTH_JWT_EXPERIMENTAL.md  AUTH_SCOPES.md  CLEANUP.md  CLI_CONTRACT.md  COVERAGE_AND_DOCKER_SMOKE.md  COVERAGE_UPLIFT.md  DEPLOYMENT_SECURITY.md  ERRORS.md  EXPLAIN_PLAN.md  INDEX.md  LEARNED_INDEXES.md  LEARNED_INDEX_HEALTH.md  LEARNED_INDEX_PERSISTENCE.md  LEARNED_OBSERVABILITY.md  MERKLE_AUDIT.md  MERKLE_EVIDENCE.md  MERKLE_INCREMENTAL.md  MERKLE_PERSISTENCE.md  MERKLE_WRITE_INTEGRATION.md  PERSISTENCE_RECOVERY.md  RATE_LIMITING.md  RELEASE.md  RELEASE_CANDIDATE.md  RELEASE_EVIDENCE.md  SECURITY_BASELINE.md  STORAGE.md  SUPPLY_CHAIN_SECURITY.md  VERSIONING.md
scripts/: clean_project.py  coverage_gate.py  docker_smoke_test.py  merkle_evidence.py  release_evidence.py  security_audit.py  supply_chain_scan.py  supply_chain_security.py  version_check.py
secure_vector_db/: __init__.py  cli.py  database.py  errors.py
tests/: test_api_merkle_evidence.py  test_api_merkle_production.py  test_auth_compat.py  test_auth_docs.py  test_auth_jwt_docs.py  test_auth_jwt_provider.py  test_auth_provider.py  test_auth_scopes.py  test_auth_scopes_docs.py  test_cli_merkle_evidence.py  test_coverage_docker_smoke.py  test_coverage_docker_smoke_docs.py  test_coverage_uplift_docs.py  test_coverage_uplift_final_release_initial.py  test_coverage_uplift_release_initial.py  test_coverage_uplift_security_indexes.py  test_explain_plan_unified.py  test_final_release_v1_0_0.py  test_merkle_audit.py  (+32 more)
(+38 files in other folders)
